--- a/a8/a8.html
+++ b/a8/a8.html
@@ -3,6 +3,7 @@
   <head>
     <title>Assignment 8</title>
   </head>
+
   <body>
     <h2>Navigation from One Page to Another</h2>
     <a href="another_page.html">Another Page</a>
@@ -14,9 +15,9 @@
     </ul>
 
     <h3 id="section1">Section 1</h3>
-    <p>This is section 1.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere impedit, inventore asperiores expedita quis repellat delectus tempora corporis enim sunt, reprehenderit eaque! Quaerat fuga similique inventore, expedita aperiam error nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, vitae exercitationem voluptatum delectus amet odit fuga distinctio ad quaerat? Vel adipisci expedxpedita aperiam error nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, vitae exercitationem voluptatum delectus amet odit fug tempora dolorum laudantium, consequuntur perspiciatis eos quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quisquam nulla dignissimos? Consequatur dicta iure, esse temporibus asperiores vel unde deleniti aut cumque ab officiis! Voluptasporibus asperiores vel unde deleniti aut cumque ab officiis! Voluptas ipsa rerum quisquam id! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro consequuntur obcaecati at nobis voluptatibus voluptates, rem cumque ipsum distinctio fugit illo unde quasi dolorem. Saepe eveniet eligendi sequi ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero possimus dolores porro asperiores saepe sed sunt illo dolor voluptates dignissimos at, tempora quis quisquam nulla repellendus iste cumque sit expedita!</p>
 
     <h3 id="section2">Section 2</h3>
-    <p>This is section 2.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere impedit, inventore asperiores expedita quis repellat delectus tempora corporis enim sunt, reprehenderit eaque! Quaerat fuga similique inventore, expedita aperiam error nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, vitae exercitationem voluptatum delectus amet odit fuga distinctio ad quaerat? Vel adipisci expedita it. Facere impedit, inventore asperiores expedita quis repellat delectus tempora corporis enim sunt, reprehenderit eaque! Quaerat fuga similique inventore, expedita aperiam error nostrum! Lorem ipsum dolor sit amet cons dolorum laudantium, consequuntur perspiciatis eos quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quisquam nulla dignissimos? Consequatur dicta iure, esse temporibus asperiores vel unde deleniti aut cumque ab officiis! Voluptas ipsa rerum quisquam id! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro consequuntur obcaecati at nobis voluptatibus voluptates, rem cumque ipsum distinctio fugit illo unde quasi dolorem. Saepe eveniet eligendi sequi ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero possimus dolores porro asperiores saepe sed sunt illo dolor voluptates dignissimos at, tempora quis quisquam nulla repellendus iste cumque sit expedita!</p>
   </body>
 </html>
