--- a/a9/a9.html
+++ b/a9/a9.html
@@ -31,19 +31,19 @@
       </thead>
       <tbody>
         <tr>
-          <td>Kaustav</td>
+          <td>Kenny</td>
           <td>5017</td>
           <td>3</td>
           <td>B</td>
         </tr>
         <tr>
-          <td>Deep</td>
+          <td>Daph</td>
           <td>5019</td>
           <td>4</td>
           <td>B</td>
         </tr>
         <tr>
-          <td>Curry</td>
+          <td>Clint</td>
           <td>3030</td>
           <td>3</td>
           <td>A</td>
