--- a/a6/a6.html
+++ b/a6/a6.html
@@ -4,7 +4,7 @@
     <title>Assignment 6</title>
   </head>
   <body>
-    <a href="https://www.apple.com/">
+    <a href="https://www.google.com/">
         <img src="img.png">
     </a>
   </body>
